left/right craziness

--- a/1108.1791/philos.tex
+++ b/1108.1791/philos.tex
@@ -1321,13 +1321,13 @@ function\textquotedblright )
 \item[(5)] \textbf{Bounded Recursion:} Suppose $f(x)  $ is
 efficiently computable, and $\left\vert f(x)  \right\vert
 \leq\left\vert x\right\vert $ for all $x\in\mathbb{N}$. Then the function
-$g\left(  \left\langle x,k\right\rangle \right)  $, defined by%
+$g(  \left\langle x,k\right\rangle )  $, defined by%
 \[
-g\left(  \left\langle x,k\right\rangle \right)  =\left\{
+g(  \left\langle x,k\right\rangle )  =\left\{
 \begin{array}
 [c]{cc}%
-f\left(  g\left(  \left\langle x,\left\lfloor k/2\right\rfloor \right\rangle
-\right)  \right)  & \text{if }k>1\\
+f(  g(  \left\langle x,\left\lfloor k/2\right\rfloor \right\rangle
+)  )  & \text{if }k>1\\
 x & \text{if }k=1
 \end{array}
 \right.  ,
@@ -1806,12 +1806,12 @@ probability $\delta>0$ that the learner is willing to tolerate. Call a
 hypothesis $h:\mathcal{S}\rightarrow\left\{  0,1\right\}  $ \textquotedblleft
 good\textquotedblright\  if%
 \[
-\Pr_{x\sim\mathcal{D}}\left[  h\left(  x\right)  =f(x)  \right]
+\Pr_{x\sim\mathcal{D}}\left[  h(  x)  =f(x)  \right]
 \geq1-\varepsilon.
 \]
 Also, call sample points $x_{1},\ldots,x_{m}$ \textquotedblleft
 reliable\textquotedblright\  if any hypothesis $h\in\mathcal{H}$ that
-satisfies $h\left(  x_{i}\right)  =f(  x_{i})  $ for all
+satisfies $h  (x_{i})  =f(  x_{i})  $ for all
 $i\in\left\{  1,\ldots,m\right\}  $ is good. Then%
 \[
 m=\frac{1}{\varepsilon}\ln\frac{\left\vert \mathcal{H}\right\vert }{\delta}%
@@ -1851,12 +1851,12 @@ hypothesis that is \textquotedblleft probably, approximately\textquotedblright\ 
 The proof of Theorem \ref{valthm} is easy: consider any hypothesis
 $h\in\mathcal{H}$ that is \textit{bad}, meaning that%
 \[
-\Pr_{x\sim\mathcal{D}}\left[  h\left(  x\right)  =f(x)  \right]
+\Pr_{x\sim\mathcal{D}}\left[  h(  x)  =f(x)  \right]
 <1-\varepsilon.
 \]
 Then by the independence assumption,%
 \[
-\Pr_{x_{1},\ldots,x_{m}\sim\mathcal{D}}\left[  h\left(  x_{1}\right)
+\Pr_{x_{1},\ldots,x_{m}\sim\mathcal{D}}\left[  h(  x_{1})
 =f(  x_{1})  \wedge\cdots\wedge h(  x_{m})  =f(
 x_{m})  \right]  <\left(  1-\varepsilon\right)  ^{m}.
 \]
@@ -2033,8 +2033,8 @@ points $x_{1},\ldots,x_{m}\in\left\{  0,1\right\}  ^{n}$, together with the
 values of $f_{s}$ on those points: $f_{s}(  x_{1})  ,\ldots
 ,f_{s}(  x_{m})  $. Given this \textquotedblleft training
 data,\textquotedblright\  the learner's goal is to figure out how to compute
-$f_{s}$ for itself---and thereby predict the values of $f_{s}\left(
-x\right)  $ on new points $x$, points \textit{not} in the training sample.
+$f_{s}$ for itself---and thereby predict the values of $f_{s}(
+x)  $ on new points $x$, points \textit{not} in the training sample.
  Unfortunately, it's easy to see that \textit{if} the learner could do that,
 then it would thereby distinguish $f_{s}$ from a truly random function---and
 thereby contradict our starting assumption that $\left\{  f_{s}\right\}
@@ -2116,20 +2116,20 @@ concepts \textquotedblleft against the grain of the world,\textquotedblright\ %
  then we shouldn't be surprised if the world's actual behavior becomes more
 cumbersome to describe, or if we make wrong predictions. It would be as if
 we were using a programming language that had no built-in function for
-multiplication, but only for $F\left(  x,y\right)  :=17x-y-x^{2}+2xy$. In
+multiplication, but only for $F(  x,y)  :=17x-y-x^{2}+2xy$. In
 that case, a normal person's first instinct would be either to switch
 programming languages, or else to \textit{define} multiplication in terms of
 $F$, and forget about $F$ from that point onward!\footnote{Suppose that our
 programming language provides only multiplication by constants, addition, and
-the function $F\left(  x,y\right)  :=ax^{2}+bxy+cy^{2}+dx+ey+f$. We can
+the function $F(  x,y)  :=ax^{2}+bxy+cy^{2}+dx+ey+f$. We can
 assume without loss of generality that $d=e=f=0$. Then provided
 $ax^{2}+bxy+cy^{2}$ factors into two independent linear terms, $px+qy$ and
 $rx+sy$, we can express the product $xy$ as%
 \[
-\frac{F\left(  sx-qy,-rx+py\right)  }{\left(  ps-qr\right)  ^{2}}.
+\frac{F(  sx-qy,-rx+py)  }{\left(  ps-qr\right)  ^{2}}.
 \]
 } Now, there \textit{is} a genuine philosophical problem here: why
-\textit{do} grue, bleen, and $F\left(  x,y\right)  $ go \textquotedblleft
+\textit{do} grue, bleen, and $F(  x,y)  $ go \textquotedblleft
 against the grain of the world,\textquotedblright\  whereas green, blue, and
 multiplication go with the grain? But to me, that problem (like Wigner's
 puzzlement over \textquotedblleft the unreasonable effectiveness of
@@ -2169,7 +2169,7 @@ in other words, a mapping from (some subset of) binary strings $y\in\left\{
 0,1\right\}  ^{\ast}$ to $\mathcal{H}$. Also, given a hypothesis
 $h\in\mathcal{H}$, let%
 \[
-\kappa_{L}\left(  h\right)  :=\min\left\{  \left\vert y\right\vert :L\left(
+\kappa_{L}(  h)  :=\min\left\{  \left\vert y\right\vert :L\left(
 y\right)  =h\right\}
 \]
 be the length of the \textit{shortest} description of $h$ in the language $L$.
@@ -2185,16 +2185,16 @@ n\right)  \geq\left\lceil \log_{2}\left\vert \mathcal{H}_{n}\right\vert
 \right\rceil $, with equality if and only if $L$ is \textquotedblleft
 optimal\textquotedblright\  (that is, if it represents each hypothesis
 $h\in\mathcal{H}_{n}$ using as few bits as possible). The question that
-concerns us is how quickly $\kappa_{L}\left(  n\right)  $ grows as a function
+concerns us is how quickly $\kappa_{L}(  n)  $ grows as a function
 of $n$, for various choices of language $L$.
 
 What does any of this have to do with the grue riddle? Well, we can think of
 the details of $L$ (its syntax, vocabulary, etc.) as affecting the
 \textquotedblleft lower-order\textquotedblright\  behavior of the function
-$\kappa_{L}\left(  n\right)  $. So for example, suppose we are unlucky
+$\kappa_{L}(  n)  $. So for example, suppose we are unlucky
 enough that $L$ contains the words \textit{grue} and \textit{bleen}, but not
-\textit{blue} and \textit{green}. That might increase $\kappa_{L}\left(
-n\right)  $ by a factor of ten or so---since now, every time we want to
+\textit{blue} and \textit{green}. That might increase $\kappa_{L}(
+n)  $ by a factor of ten or so---since now, every time we want to
 mention \textquotedblleft green\textquotedblright\  when specifying our
 hypothesis $h$, we instead need a wordy circumlocution like \textquotedblleft
 grue before January 1, 2030, and then bleen afterwards,\textquotedblright\  and
@@ -2202,7 +2202,7 @@ similarly for blue.\footnote{Though note that, if the language \thinspace$L$
 is expressive enough to allow this, we can simply define green and blue in
 terms of bleen and grue \textit{once}, then refer back to those definitions
 whenever needed! In that case, taking bleen and grue (rather than green and
-blue) to be the primitive concepts would increase $\kappa_{L}\left(  n\right)
+blue) to be the primitive concepts would increase $\kappa_{L}(  n)
 $ by only an \textit{additive} constant, rather than a multiplicative
 constant.
 \par
@@ -2218,15 +2218,15 @@ such that $\left\vert K_{P}(  x)  -K_{Q}(  x)
 number of bits needed to write a $P$-interpreter for $Q$-programs or vice
 versa.} However, a crucial lesson of complexity theory is that the
 \textquotedblleft higher-order\textquotedblright\  behavior of $\kappa
-_{L}\left(  n\right)  $---for example, whether it grows polynomially or
+_{L}(  n)  $---for example, whether it grows polynomially or
 exponentially with $n$---is almost completely unaffected by the details of
 $L$! The reason is that, if two languages $L_{1}$ and $L_{2}$ differ only
 in their \textquotedblleft low-level details,\textquotedblright\  then
 \textit{translating} a hypothesis from $L_{1}$ to $L_{2}$ or vice versa will
 increase the description length by no more than a polynomial factor. Indeed,
 as in our grue example, there is usually a \textquotedblleft universal
-translation constant\textquotedblright\  $c$ such that $\kappa_{L_{1}}\left(
-h\right)  \leq c\kappa_{L_{2}}(  h)  $ or even $\kappa_{L_{1}%
+translation constant\textquotedblright\  $c$ such that $\kappa_{L_{1}}(
+h)  \leq c\kappa_{L_{2}}(  h)  $ or even $\kappa_{L_{1}%
 }(  h)  \leq\kappa_{L_{2}}(  h)  +c$ for \textit{every}
 hypothesis $h\in\mathcal{H}$.
 
@@ -2235,8 +2235,8 @@ have different\textit{ expressive powers}. For example, maybe $L_{1}$ only
 allows nesting expressions to depth two, while $L_{2}$ allows nesting to
 arbitrary depths; or $L_{1}$ only allows propositional connectives, while
 $L_{2}$ also allows first-order quantifiers. In those cases, $\kappa_{L_{1}%
-}(  h)  $ could indeed be much greater than $\kappa_{L_{2}}\left(
-h\right)  $ for some hypotheses $h$, possibly even exponentially greater
+}(  h)  $ could indeed be much greater than $\kappa_{L_{2}}(
+h)  $ for some hypotheses $h$, possibly even exponentially greater
 ($\kappa_{L_{1}}(  h)  \approx2^{\kappa_{L_{2}}(  h)  }%
 $). A rough analogy would be this: suppose you hadn't learned what
 differential equations were, and had no idea how to solve them even
@@ -2925,9 +2925,9 @@ hard to show that $\mathsf{PSPACE}$ is at least as powerful as $\mathsf{NP}$:%
 \]
 Here $\mathsf{EXP}$ represents the class of problems solvable using an
 exponential amount of time, and also possibly an exponential amount of
-memory.\footnote{In this context, we call a function $f\left(  n\right)
+memory.\footnote{In this context, we call a function $f(  n)
 $ \textquotedblleft exponential\textquotedblright\  if it can be upper-bounded
-by $2^{p\left(  n\right)  }$, for some polynomial $p$. Also, note that
+by $2^{p(  n)  }$, for some polynomial $p$. Also, note that
 \textit{more} than exponential memory would be useless here, since a Turing
 machine that runs for $T$ time steps can visit at most $T$ memory cells.}
  Every one of the above containments is believed to be strict, although the
@@ -2935,16 +2935,16 @@ only one currently \textit{proved} to be strict is $\mathsf{P}\neq
 \mathsf{EXP}$, by an important 1965 result of Hartmanis and Stearns
 \cite{hs} called the Time Hierarchy Theorem\footnote{More generally, the Time
 Hierarchy Theorem shows that, if $f$ and $g$ are any two \textquotedblleft
-sufficiently well-behaved\textquotedblright\  functions that satisfy $f\left(
-n\right)  \ll g\left(  n\right)  $ (for example: $f\left(  n\right)  =n^{2}%
-$ and $g\left(  n\right)  =n^{3}$), then \textit{there are computational
-problems solvable in }$g\left(  n\right)  $\textit{ time but not in
-}$f\left(  n\right)  $\textit{ time}. The proof of this theorem uses
+sufficiently well-behaved\textquotedblright\  functions that satisfy $f(
+n)  \ll g(  n)  $ (for example: $f(  n)  =n^{2}%
+$ and $g(  n)  =n^{3}$), then \textit{there are computational
+problems solvable in }$g(  n)  $\textit{ time but not in
+}$f(  n)  $\textit{ time}. The proof of this theorem uses
 diagonalization, and can be thought of as a scaled-down version of Turing's
 proof of the unsolvability of the halting problem. That is, we argue that,
-\textit{if} it were always possible to simulate a $g\left(  n\right)  $-time
-Turing machine by an $f\left(  n\right)  $-time Turing machine, then we could
-construct a $g\left(  n\right)  $-time machine that \textquotedblleft
+\textit{if} it were always possible to simulate a $g(  n)  $-time
+Turing machine by an $f(  n)  $-time Turing machine, then we could
+construct a $g(  n)  $-time machine that \textquotedblleft
 predicted its own output in advance\textquotedblright\  and then output
 something else---thereby causing a contradiction.
 \par
@@ -3050,7 +3050,7 @@ $ is physically indistinguishable from an equal mixture of $\frac{\left\vert
 0\right\rangle +\left\vert 1\right\rangle }{\sqrt{2}}$ and $\frac{\left\vert
 0\right\rangle -\left\vert 1\right\rangle }{\sqrt{2}}$. This is why mixed
 states are represented mathematically using Heisenberg's density matrix
-formalism.} $\rho$ such that $S\left(  \rho\right)  =\rho$. The existence
+formalism.} $\rho$ such that $S(  \rho)  =\rho$. The existence
 of such a $\rho$ follows from simple linear-algebraic arguments. As one
 illustration, the \textquotedblleft resolution of the grandfather
 paradox\textquotedblright\  is now that you are born with probability $1/2$,
@@ -3068,7 +3068,7 @@ we have made the evolution of the universe consistent.
 
 But Deutsch's account of CTCs faces at least three serious difficulties. The
 first difficulty is that the fixed points might not be \textit{unique}: there
-could be many mixed states $\rho$ such that $S\left(  \rho\right)  =\rho$,
+could be many mixed states $\rho$ such that $S(  \rho)  =\rho$,
 and then the question arises of how Nature chooses one of them. To
 illustrate, consider the \textit{grandfather anti-paradox}: a bit
 $b\in\left\{  0,1\right\}  $ that travels around a CTC without changing. We
@@ -3265,7 +3265,7 @@ is the \textquotedblleft computational complexity paradox,\textquotedblright\ %
 
 In classical economics, agents are modeled as rational, Bayesian agents who
 take whatever actions will maximize their expected utility $\operatorname*{E}%
-_{\omega\in\Omega}\left[  U\left(  \omega\right)  \right]  $, given their
+_{\omega\in\Omega}\left[  U(  \omega)  \right]  $, given their
 subjective probabilities $\left\{  p_{\omega}\right\}  _{\omega\in\Omega}%
 $ over all possible states $\omega$ of the world.\footnote{Here we assume
 for simplicity that the set $\Omega$ of possible states is countable;
