--- a/1108.1791/philos.tex
+++ b/1108.1791/philos.tex
@@ -565,8 +565,8 @@ characteristically-careful phrasing. He does not ask whether evolution can
 \textit{eventually} form a human body (for he knows that it can, given
 exponential time); instead, he asks whether it can do so on a
 \textquotedblleft merely\textquotedblright\  geological\textit{ }timescale.
- Just as G\"{o}del's letter to von Neumann anticipated the $\mathsf{P}%
- $versus $\mathsf{NP}$ problem, so G\"{o}del's letter to Wang might be said
+Just as G\"{o}del's letter to von Neumann anticipated the $\mathsf{P}$
+versus $\mathsf{NP}$ problem, so G\"{o}del's letter to Wang might be said
 to anticipate a recent effort, by the celebrated computer scientist Leslie
 Valiant, to construct a quantitative \textquotedblleft theory of
 evolvability\textquotedblright\  \cite{valiant:evol}. Building on Valiant's
