--- a/1612.09375/BasicCategoryTheory.tex
+++ b/1612.09375/BasicCategoryTheory.tex
@@ -22,7 +22,7 @@
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
-bookmarksopenlevel=10
+bookmarksopenlevel=10, bookmarksdepth=3
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
@@ -45,6 +45,10 @@ bookmarksopenlevel=10
 \AJW@headwidth \textwidth
 \addtolength{\AJW@headwidth}{-\AJW@indent}
 \makeatother
+
+\raggedbottom
+\parindent=1.5em
+\pagestyle{plain}
 
 \begin{document}
 
