--- a/1612.09375/arxivpreface.tex
+++ b/1612.09375/arxivpreface.tex
@@ -13,6 +13,7 @@
 
 \chapter*{Preface to the arXiv version}
 
+\vskip -2em
 
 This book was first published by Cambridge University Press in 2014, and is
 now being published on the arXiv by mutual agreement.  CUP has consistently
@@ -30,8 +31,7 @@ reading on a particular device, that is easy too.
 
 In legal terms, this text is released under the Creative Commons
 Attribution-NonCommercial-ShareAlike 4.0 International licence (CC BY-NC-SA
-4.0).  The licence terms are available at the Creative Commons website,
-\href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{\url{https://creativecommons.org/licenses/by-nc-sa/4.0}}.
+4.0).  The licence terms are available at the \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{Creative Commons website}.
 Broadly speaking, the licence allows you to edit and redistribute this text
 in any way you like, as long as you include an accurate statement about
 authorship and copyright, do not use it for commercial purposes, and
