--- a/1612.09375/BasicCategoryTheory.tex
+++ b/1612.09375/BasicCategoryTheory.tex
@@ -27,6 +27,7 @@ bookmarksopenlevel=10, bookmarksdepth=3
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={5.9in, 8.5in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
