--- a/1612.09375-ams-ish/BasicCategoryTheory.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory.tex
@@ -33,7 +33,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,osf, sc]{mathpazo}
+\usepackage[noBBpl, sc]{mathpazo}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={5.9in, 8.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
 \tolerance=2000
