--- a/1207.2389/definitions.tex
+++ b/1207.2389/definitions.tex
@@ -2,10 +2,10 @@
 %\usepackage[danish]{babel}      % Danske overskrifter
 \usepackage[latin1]{inputenc}   % Danske tegn
 %\usepackage{array}
-\usepackage{amsmath}
+%\usepackage{amsmath}
 \usepackage{epsfig}
 \usepackage{graphics}
-\usepackage{amsfonts}
+%\usepackage{amsfonts}
 \usepackage{pifont}
 \usepackage{booktabs}
 \usepackage{xspace}
@@ -22,7 +22,27 @@
 %\usepackage{utopia}
 %\usepackage{newcent}
 %\usepackage{times}
-\usepackage{charter}
+\usepackage[full]{textcomp}
+\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+\linespread{1.05}
+\input{../helpers/fix-underbrace.tex}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 %\renewcommand{\familydefault}{phv}  
 %\renewcommand{\familydefault}{pac}  
 %\renewcommand{\familydefault}{pad}  
