--- a/1207.2389/tasi-skands.tex
+++ b/1207.2389/tasi-skands.tex
@@ -1,16 +1,16 @@
-\documentclass[11pt,letterpaper,twopage,pdf]{article}
+\documentclass[11pt,pdf]{article}
 \pdfoutput=1
 \input{definitions}
 \setlength{\parskip}{0.5mm}
 \setlength{\footskip}{1.5cm}
 \setlength{\itemsep}{1.5mm}
-\usepackage[top=1.135in,bottom=1.17in,left=1.16in,right=1.16in]{geometry}
-\pagestyle{fancy}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\pagestyle{plain}
 \rhead{Introduction to QCD}
 \chead{}
 \lhead{P.~Skands}
 \rfoot{}
-\cfoot{---~\thepage~---}
+\cfoot{-- \thepage --}
 \lfoot{}
 
 %%% TODO: suggestions for things to include in future.
