--- a/1002.5032/QCDRLrt7prb.tex
+++ b/1002.5032/QCDRLrt7prb.tex
@@ -21,18 +21,51 @@
 %  Add 'showpacs' option to make PACS codes appear
 
 %\documentclass[aps,groupedaddress,hyperref,nofootinbib,showpacs]{revtex4}
-\documentclass[prb,groupedaddress,nofootinbib,showpacs,twocolumn,floatfix]{revtex4}
+\documentclass[11pt,prb,groupedaddress,nofootinbib,showpacs,floatfix]{revtex4-1}
 %\documentclass[aps,preprint,superscriptaddress]{revtex4}
 %\documentclass[aps,twocolumn,groupedaddress]{revtex4}
+
 \usepackage{revsymb}
 \usepackage{bm}
 \usepackage{graphicx}
 \usepackage{amsfonts}
 \usepackage{natbib}
 \usepackage{bibentry}
-\usepackage{hyperref}
 \usepackage{gtdeleq}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[small]{titlesec}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \usepackage{color}
 \definecolor{IITred}{rgb}{0.5,0.05,0.05}
 \definecolor{TrueBlue}{rgb}{0.05,0.05,0.5}
@@ -78,7 +111,7 @@
 \newcommand{\Eqn}[1]{Eq.~(\ref{#1})}
 \newcommand{\abs}[1]{\left| #1\right|}
 
-\newcommand{\cfrac}[2]{{\textstyle \frac{#1}{#2}}}
+\renewcommand{\cfrac}[2]{{\frac{#1}{#2}}}
 \newcommand{\half}{{\textstyle \frac{1}{2}}}
 \newcommand{\gtimes}{\times}
 
@@ -105,7 +138,7 @@
 
 %\bibliographystyle{apsrev}
 %\bibliographystyle{QCDRLv1}
-\bibliographystyle{QCDRLv3}
+%\bibliographystyle{QCDRLv3}
 
 \begin{document}
 % You should use BibTeX and apsrev.bst for references
@@ -919,8 +952,11 @@ starkly distinct origins---is constrained by the neutron electric
 dipole moment to be $\sim10^{-11}$.
 The \emph{strong CP problem} was clearly posed, and a still-popular 
 resolution proposed in
+\tracingmacros=1
 \citentry{Peccei:1977hh}
 \noindent Further possible resolutions are explained in
+\tracingmacros=0
+
 \citentry{Dine:2000cj}
 \noindent The Peccei-Quinn solution requires a new particle, the axion, 
 with several implications for particle physics and, possibly, cosmology.
