--- a/1002.5032/QCDRLrt7prb.tex
+++ b/1002.5032/QCDRLrt7prb.tex
@@ -185,7 +185,7 @@ P.O. Box 500, Batavia, Illinois 60510 USA}
 %\collaboration{}
 %\noaffiliation
 
-\date{\today}
+\date{24 Oct 2010}
 %\received{\today}
 %\accepted{\today}
 %\published{\today}
