--- a/hep-th-0009139/hep-th-0009139-work.tex
+++ b/hep-th-0009139/hep-th-0009139-work.tex
@@ -1,4 +1,4 @@
-\documentstyle[12pt]{article}
+\documentclass[12pt]{article}
 \textheight=8.5truein
 \textwidth=6.1truein
 
@@ -11,6 +11,22 @@
 \oddsidemargin=0in
 
 \input epsf.tex
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[small]{titlesec}
 
 \begin{document}
 
