--- a/1207.2389/definitions.tex
+++ b/1207.2389/definitions.tex
@@ -23,7 +23,7 @@
 %\usepackage{newcent}
 %\usepackage{times}
 \usepackage[full]{textcomp}
-\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \linespread{1.05}
