--- a/1608.04948/TASI-AdSCFT-chapter.tex
+++ b/1608.04948/TASI-AdSCFT-chapter.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{ws-rv9x6}
+\documentclass[11pt]{ws-rv9x6}
 \usepackage{ws-rv-thm}
 \usepackage[square]{ws-rv-van}
 \usepackage{simplewick}
@@ -18,11 +18,21 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\linespread{1.1}
+\usepackage{amssymb}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\pagestyle{plain}
+% the lucida varphi is hideous
+\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
+\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
+
+\input{../helpers/fix-underbrace.tex}
+\usepackage[papersize={6.5in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 
 %
 %
