--- a/1602.07982/TASI-bootstrap-chapter.tex
+++ b/1602.07982/TASI-bootstrap-chapter.tex
@@ -1,10 +1,37 @@
-\documentclass{ws-rv9x6}
+\documentclass[11pt]{ws-rv9x6}
 \usepackage{ws-rv-thm}
 \usepackage[square]{ws-rv-van}
 \usepackage{simplewick}
 \usepackage{relsize}
 \usepackage{alphalph}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage{amssymb}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[altbullet]{lucidabr}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\pagestyle{plain}
+% the lucida varphi is hideous
+\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
+\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
+
+\input{../helpers/fix-underbrace.tex}
 \newif\ifarxivsubmission
 
 \arxivsubmissiontrue
@@ -12,8 +39,8 @@
 \ifarxivsubmission
   \usepackage{color}
   \definecolor{darkblue}{rgb}{0.1,0.1,.7}
-  \usepackage[colorlinks, linkcolor=darkblue, citecolor=darkblue, urlcolor=darkblue, linktocpage]{hyperref}
-  \crop[off]{}
+  %\usepackage[colorlinks, linkcolor=darkblue, citecolor=darkblue, urlcolor=darkblue, linktocpage]{hyperref}
+  %\crop[off]{}
   \makeatletter
   \def\@makechapterhead#1{%                                                                                                      
     {\vbox to 110pt{%        %rvs                                                                                              
@@ -29,10 +56,12 @@
     }\par}\par}\nobreak\vfill}}}%  %rvs
   \makeatother
 \else
-  \usepackage[]{hyperref}
+  %\usepackage[]{hyperref}
 \fi
 
 \makeindex
+
+\usepackage[papersize={6.5in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 
 \newcommand\be{\begin{eqnarray}}
 \newcommand\ee{\end{eqnarray}}
@@ -1945,7 +1974,7 @@ The best bound is the critical value $\De_{0}^\mathrm{crit.}$ above which (\ref{
 
 An implementation of this procedure is included with the semidefinite program solver {\tt SDPB} \cite{Simmons-Duffin:2015qma}.\footnote{See {\tt mathematica/Bootstrap2dExample.m} at {\tt https://github.com/davidsd/sdpb}.}  See also \cite{Behan:2016dtz} for a Python interface to {\tt SDPB} and \cite{Paulos:2014vya} for another user-friendly bootstrap package.  Running the code for $\Lambda=6,8,12,16,20,28$ gives the bounds shown in figure~\ref{fig:2dbound}.\footnote{We use the {\tt SDPB} parameters listed in the appendix of \cite{Simmons-Duffin:2015qma}.}  
 
-\begin{figure}[hrt!]
+\begin{figure}[hpt!]
 \begin{center}
 \includegraphics[width=\textwidth]{2dBound}
 \end{center}
@@ -1969,7 +1998,7 @@ $\De_0^\mathrm{crit.}(\De_\f=\frac 1 8)$ & 1.020 & 1.0027 & 1.00053 & 1.000043 &
 
 It is helpful to compare to exact solutions in 2d, but the above results are remarkable because the methods are so general. We input information about 2d global conformal symmetry (nothing about the Virasoro algebra!) and unitarity, and the 2d Ising model pops out.  Wonderfully, the same thing happens in 3d! Again, we compute an upper bound on the lowest dimension scalar in the $\f\x\f$ OPE, this time using the 3d conformal blocks and the 3d unitarity bound.  The resulting bound, shown in figure~\ref{fig:singletbound3d}, has a kink at $(\De_\f,\De_0)\approx(0.518,1.412)$ --- close to the values realized in the 3d Ising CFT \cite{ElShowk:2012ht}.
 
-\begin{figure}[hrt!]
+\begin{figure}[hpt]
 \begin{center}
 \includegraphics[width=\textwidth]{singleCorrelator3dBound}
 \end{center}
@@ -1978,7 +2007,7 @@ It is helpful to compare to exact solutions in 2d, but the above results are rem
 
 All the results discussed so far come from studying crossing symmetry of a single four-point function.  However, the techniques can be generalized to systems of correlation functions. The system $\<\s\s\s\s\>$, $\<\s\s\e\e\>$, $\<\e\e\e\e\>$ in the 3d Ising CFT was studied in \cite{Kos:2014bka}.  To get interesting new bounds in this case, it's necessary to input an additional fact: that $\s$ and $\e$ are the only relevant scalars in the theory.\footnote{This is an obvious experimental fact about the 3d Ising CFT. (It would be interesting to prove mathematically.)  Relevant scalars are in one-to-one correspondence with parameters that must be tuned to reach the critical point in some microscopic theory.  The fact that the phase diagram of water is 2-dimensional (the axes are temperature and pressure) tells us that the critical point of water has two relevant operators.}  In practice, this roughly means that we impose positivity conditions $\alpha(F_{\De,\ell})\geq 0$ for $\De=\De_\s,\De_\e$, and $\De\geq 3$.  The resulting bound in figure~\ref{fig:multicorrelator3d} now restricts $(\De_\s,\De_\e)$ to a small island in the space of operator dimensions.
 
-\begin{figure}[hrt!]
+\begin{figure}[hpt]
 \begin{center}
 \includegraphics[width=\textwidth]{multiCorrelator3dBound}
 \end{center}
@@ -1993,7 +2022,7 @@ Figures~\ref{fig:multicorrelator3d} and~\ref{fig:sdpbBound} are conceptually int
 
 Secondly, figures~\ref{fig:multicorrelator3d} and~\ref{fig:sdpbBound} give a way to understand the phenomenon of critical universality discussed at the beginning of this course.  If a theory flows to a unitary 3d CFT with a $\Z_2$-symmetry and two relevant scalars $\s,\e$ --- and if $\De_\s,\De_\e$ don't live in the bulk region in figure~\ref{fig:multicorrelator3d} --- then the IR theory must live in the 3d Ising island!  Perhaps future bootstrap studies will shrink the 3d Ising island to a point, proving the IR equivalence of these theories.
 
-\begin{figure}[hrt!]
+\begin{figure}[hpt]
 \begin{center}
 \includegraphics[width=\textwidth]{sdpbBound}
 \end{center}
