--- a/2001.04383/compression_arXiv_v1.tex
+++ b/2001.04383/compression_arXiv_v1.tex
@@ -4,8 +4,26 @@
 \usepackage{titlesec}
 \newcommand{\sectionbreak}{\clearpage}
 \usepackage{amsmath,amsfonts,amsthm,mathrsfs,xspace,graphicx}
-\usepackage[backref,colorlinks,citecolor=blue,bookmarks=true]{hyperref}
-\usepackage{mathpazo}
+\usepackage[colorlinks=true,backref,
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}\usepackage[noBBpl,sc]{mathpazo}
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+\usepackage{mathtools}
+
+\linespread{1.1}
+
 \usepackage{endnotes}
 \usepackage{color}
 \usepackage{float}
@@ -13,7 +31,6 @@
 \usepackage{mdframed}
 \usepackage{bbm}
 \usepackage{suffix} % for *-version commands
-\usepackage{times}
 \usepackage{tabularx}
 \usepackage{makecell}
 \usepackage{amssymb,latexsym}
@@ -25,6 +42,8 @@
 \usepackage{multirow}
 \usepackage[section]{placeins}
 \usepackage[affil-it]{authblk}
+
+\usepackage[papersize={7.4in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 
 
 \mdfdefinestyle{figstyle}{ %
@@ -568,7 +587,7 @@ A promise language $L$ is specified by two disjoint subsets $L_{yes},L_{no}\subs
 
 % the completeness and soundness requirements are relaxed so that (i) completeness is only required for $x\in L_{yes}$, and (ii) soundness is only required for all $x\in L_{no}$. In other words, no guarantee is required on the verification procedure for the case when it is provided a $z$ such that $z\notin L_{yes}\cup L_{no}$. 
 
-The promise language $\GX$ is defined as follows: $\GX_{yes}$ (resp. $\GX_{no}$) is the set of all graphs $G$ %such that $z$ is the description of a graph 
+The promise language $\GX$ is defined as follows: $\GX_{yes}$ (resp. \break $\GX_{no}$) is the set of all graphs $G$ %such that $z$ is the description of a graph 
 with a \emph{cut} (i.e. a bipartition of the vertices) such that at least $90\%$ of edges cross the cut (resp. at most $60\%$ of edges cross the cut).\footnote{The specific numbers $90\%$ and $60\%$ are not too important; the only thing that really matters is that the first one is strictly less than $100\%$ and the second strictly larger than $50\%$, as otherwise the problem becomes much easier.} For simplicity, we also assume that all graphs in $\GX_{yes}\cup \GX_{no}$ are regular, i.e.\ the degree is a constant across all vertices in the graph. 
 
 The $\GX$ problem clearly lies in $\NP$, since given a candidate cut it is easy to count the number of edges that cross it and verify that it is at least $90\%$ of the total number of edges. Observe that the length of the proof and the time required to verify it are linear in the size of the graph (the number of vertices and edges). \emph{Finding} the proof is of course much harder, but we are only concerned with the complexity of the verification procedure.
