--- a/2001.04383/compression_arXiv_v1.tex
+++ b/2001.04383/compression_arXiv_v1.tex
@@ -17,7 +17,8 @@
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
-}\usepackage[noBBpl,sc]{mathpazo}
+}
+\usepackage[noBBpl,sc]{mathpazo}
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
 \usepackage{mathtools}
@@ -166,8 +167,8 @@ bookmarksopenlevel=10
 
 
 \newcommand{\ac}{\textsc{ac}}
-\newcommand{\GX}{\textsc{Gap-Maxcut}}
-\newcommand{\GNI}{\textsc{Graph Non-Isomorphism}}
+\newcommand{\GX}{\textsc{Gap}\textsc{-}\penalty-1000\textsc{Maxcut}}
+\newcommand{\GNI}{\textsc{Graph}~\textsc{Non}\textsc{-}\penalty-1000\textsc{Isomorphism}}
 
 
 \newcommand{\Acc}{\textsc{Acc}}
