--- a/hep-th-9705078/notes.tex
+++ b/hep-th-9705078/notes.tex
@@ -111,6 +111,8 @@ Piscataway, NJ, 08855, USA}
 \begin{document}
 \bibliographystyle{unsrt}
 
+\maketitle
+
 \begin{abstract}
 
 Black holes have an entropy proportional to the area of the horizon.
@@ -125,14 +127,12 @@ In this description, Hawking radiation emerges as a simple perturbative
 process. The low energy dynamics of particle absorption and emission
 agrees in detail with the semiclassical analysis in the thermodynamic
 limit.
-
-
-
  
 \end{abstract}
 
+\newpage
+
 % typeset front matter (including abstract)
-\maketitle
 
 \section{Introduction}
 
