--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -8250,8 +8250,8 @@ and they have the detailed form (notice that $P_{ij}\equiv\half N P^{\rm dis}_{i
 \frac{{\rm d}P_{\uparrow\uparrow}(0,t)}{{\rm
 d}t}&=&\frac{2\gamma}{\hbar^2}
 \left\{2P_{\uparrow\uparrow}(1,t)\tilde
-K_t(\omega_+)+2P_{\uparrow\uparrow}(-1,t)\tilde K_t(\omega_-)
--P_{\uparrow\uparrow}(0,t)\left[\tilde K_t(-\omega_+)
+K_t(\omega_+)+2P_{\uparrow\uparrow}(-1,t)\tilde K_t(\omega_-) \right. \nn\\
+&& \left. -P_{\uparrow\uparrow}(0,t)\left[\tilde K_t(-\omega_+)
 +\tilde K_t(-\omega_-)\right]\right\}, \\
 \label{1upup} 
 \frac{{\rm d}P_{\uparrow\uparrow}(\pm1,t)}{{\rm d}t}&=&\frac{2\gamma}{\hbar^2}
@@ -8268,11 +8268,11 @@ K_{t<}(\omega_+)\right]
 +\tilde K_{t}(-\omega_-)\right]\right\}, \\
 \label{1updown} 
 \frac{{\rm d}P_{\uparrow\downarrow}(\pm1,t)} {{\rm
-d}t}&\mp&\frac{4ig}{\hbar}P_{\uparrow\downarrow}(\pm1,t)
-=\frac{2\gamma}{\hbar^2} \left\{
+d}t}&\mp&\frac{4ig}{\hbar}P_{\uparrow\downarrow}(\pm1,t)\nn\\
+&=&\frac{2\gamma}{\hbar^2} \left\{
 P_{\uparrow\downarrow}(0,t)\left[\tilde K_{t>}(-\omega_\pm)
-+\tilde K_{t<}(-\omega_\mp)\right]
--2P_{\uparrow\downarrow}(\pm1,t)\left[\tilde K_{t>}(\omega_\pm)
++\tilde K_{t<}(-\omega_\mp)\right] \right.\nn\\
+&&\quad \left. -2P_{\uparrow\downarrow}(\pm1,t)\left[\tilde K_{t>}(\omega_\pm)
 +\tilde K_{t<}(\omega_\mp)\right]\right\}. \EEA 
 As initial state for $M$ we take the ``paramagnetic'' one, $P_{\rm M}(0)=1$, $P_{\rm M}(\pm1)=0$,
 prepared by letting $T_0\gg J$ or with a radiofrequency field as in \S~\ref{section.3.3.3}. 
