--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -8294,11 +8294,11 @@ tend to a common value close to $\half$ for $T\ll J$.
 
 This is made obvious by the expression of (\ref{dis}) of the $H$-theorem.
 The dissipation in the Markovian regime \cite{petr,Weiss,Gardiner} reads here
-
 \BEA
 \frac{{\rm d}F(t)}{{\rm d}t}&=&-\frac{\gamma}{2\beta}\frac{\omega_+
 e^{-|\omega_+|/\Gamma}}{e^{\beta\hbar\omega_+}-1}
-\left[P(0,t)e^{\beta\hbar\omega_+}-2P(1,t)\right]\ln\frac{P(0,t)e^{\beta\hbar\omega_+}}{2P(1,t)}
+\left[P(0,t)e^{\beta\hbar\omega_+}-2P(1,t)\right] \times \nn\\
+&& \qquad \times \ln\frac{P(0,t)e^{\beta\hbar\omega_+}}{2P(1,t)}
 +\left[\omega_+\mapsto\omega_-,\quad P(1,t)\mapsto P(-1,t)\right],
 \EEA 
 and the free energy decreases until the equilibrium
@@ -8325,7 +8325,6 @@ $m=-1$. Since in the Markovian regime the transition probabilities in
 $\exp{\beta\hbar\omega_\pm}$, we must have $\exp{4\beta g}\gg1$. The
 coupling $g$ should moreover not modify much the spectrum, so that we
 are led to impose the conditions
-
 \BEA
 \label{condN=2} 
 T\ll4g\ll J.
@@ -8641,19 +8640,17 @@ from \begin{equation}  z^2-z\varepsilon\left(\frac{1+2\lambda^2}{1+\lambda^2}+
 (\ref{0simp}), (\ref{1simp}), with the initial condition
 $P_{\uparrow\downarrow}(m,0)=r_{\uparrow\downarrow}(0)\delta_{m,0}$
 is given by
-
-
-\BEA &&\label{solupdown0} 
- P_{\uparrow\downarrow}(0,t)=r_{\uparrow\downarrow}(0)\left[ e^{-z_0t/\tau}
--\frac{(z_1-\varepsilon)^2+\lambda^2}{(z_0-z_1)(z_1-z_2)}(e^{-z_1t/\tau}-e^{-z_0t/\tau})
--\frac{(z_2-\varepsilon)^2+\lambda^2}{(z_0-z_2)(z_2-z_1)}(e^{-z_2t/\tau}-e^{-z_0t/\tau})
+\BEA \label{solupdown0} 
+ P_{\uparrow\downarrow}(0,t)&=&r_{\uparrow\downarrow}(0)\left[ e^{-z_0t/\tau}
+-\frac{(z_1-\varepsilon)^2+\lambda^2}{(z_0-z_1)(z_1-z_2)}(e^{-z_1t/\tau}-e^{-z_0t/\tau})\right. - \nn\\
+&&\left.\qquad\qquad -\frac{(z_2-\varepsilon)^2+\lambda^2}{(z_0-z_2)(z_2-z_1)}(e^{-z_2t/\tau}-e^{-z_0t/\tau})
 \right],
-\quad 
-\\&& \label{solupdown1} 
-P_{\uparrow\downarrow}(\pm1,t)=r_{\uparrow\downarrow}(0)\left[
+\\
+\label{solupdown1} 
+P_{\uparrow\downarrow}(\pm1,t)&=&r_{\uparrow\downarrow}(0)\left[
 \frac{z_1-\varepsilon\mp i\lambda}{2(z_0-z_1)(z_1-z_2)}
-\left(e^{-z_1t/\tau}-e^{-z_0t/\tau}\right)
-+\frac{z_2-\varepsilon\mp i\lambda}{2(z_0-z_2)(z_2-z_1)}
+\left(e^{-z_1t/\tau}-e^{-z_0t/\tau}\right)\right. + \nn\\
+&&\qquad\qquad \left.+\frac{z_2-\varepsilon\mp i\lambda}{2(z_0-z_2)(z_2-z_1)}
 \left(e^{-z_2t/\tau}-e^{-z_0t/\tau}\right) \right]. \EEA
 
 According to (\ref{solupdown0}), the first term of $P_{\uparrow\downarrow}(0,t)$ is damped for $\varepsilon\ll1$ over
@@ -8675,7 +8672,7 @@ $z_2$, is
 
 \begin{equation}  P_{\uparrow\downarrow}(0,t)\sim r_{\uparrow\downarrow}(0)
 \frac{\varepsilon(\varepsilon+\sqrt{\varepsilon^2-4\lambda^2})}
-{2\sqrt{\varepsilon^2-4\lambda^2}}e^{-t/\tau_{\rm trunc}},\qquad
+{2\sqrt{\varepsilon^2-4\lambda^2}}e^{-t/\tau_{\rm trunc}},\quad
 P_{\uparrow\downarrow}(\pm1,t)\sim r_{\uparrow\downarrow}(0)
 \frac{\varepsilon \pm 2i\lambda+\sqrt{\varepsilon^2-4\lambda^2}}
 {4\sqrt{\varepsilon^2-4\lambda^2}}e^{-t/\tau_{\rm trunc}}. \nn \end{equation} 
@@ -8705,12 +8702,12 @@ being large.) The long-time behavior is given by
 
 \BEA
 \label{P0pm1expres}
-&&P_{\uparrow\downarrow}(0,t)\sim\frac{\varepsilon
+P_{\uparrow\downarrow}(0,t)&\sim&\frac{\varepsilon
 r_{\uparrow\downarrow}(0)}{(1+\lambda^2)^2} e^{-t/\tau_{\rm trunc}}
 \left[(1-\lambda^2)\cos\frac{2\pi t}{\theta} +
 \frac{2\lambda^2}{\sqrt{\lambda^2-\varepsilon^2/4}} \sin\frac{2\pi
-t}{\theta}\right],\nn\\&&
-P_{\uparrow\downarrow}(\pm1,t)\sim\frac{r_{\uparrow\downarrow}(0)}{2(1\pm
+t}{\theta}\right],\nn\\
+P_{\uparrow\downarrow}(\pm1,t)&\sim&\frac{r_{\uparrow\downarrow}(0)}{2(1\pm
 i\lambda)} e^{-t/\tau_{\rm trunc}} \left[\cos\frac{2\pi t}{\theta}
 \pm  \frac{i\lambda}{\sqrt{\lambda^2-\varepsilon^2/4}}
 \sin\frac{2\pi t}{\theta}\right],\end{eqnarray} 
@@ -8816,10 +8813,6 @@ was ensured by the large size of the pointer M, whereas bath-induced decoherence
  The latter property will be proven in section 11 for the Curie--Weiss model; its explanation will rely on a coupling between the large number of eigenstates of M 
  involved for $N\gg1$ in each ferromagnetic equilibrium state. Here, for $N=2$, the ``ferromagnetic'' state is non degenerate, and that mechanism cannot be invoked. 
 
-
-
-
-
 Anyhow, the process that we described cannot be regarded for $N=2$ as a full measurement. Being microscopic, the pair of spins M is not a ``pointer" that can 
 be observed directly. In order to get a stable signal, which provides us with information and which we may use at a macroscopic level, we need to couple M to
  a genuine macroscopic apparatus. This should be done after the time
@@ -8842,6 +8835,7 @@ be determined by means of an apparatus with classical features.
 
 }%EndZeText
 
+\newpage
 
 \subsubsection{Can one simultaneously ``measure'' non-commuting variables?}
 \label{section.8.1.6}
@@ -8856,10 +8850,9 @@ be determined by means of an apparatus with classical features.
 \myskipfigText{
 \begin{figure}[h!h!h!]
 \label{ArmProv2}
-\hfill{\includegraphics[width=6cm]{ArmenianDream}\hspace{2.6mm}}
+\hfill{\includegraphics[width=6cm]{ArmenianDream}\hspace{3.6mm}}
 \end{figure}}
-
-\vspace{-4.2cm}
+\vspace{-4.cm}
 
 
 \hfill{Armenian proverb}
@@ -8906,6 +8899,7 @@ With this setup we can also repeat measurements in the $z$-direction and see how
 
 }%EndZeText
 
+\newpage
 
 \subsection{Measuring a non-conserved quantity}
 \label{section.8.2}
