--- a/1107.2138/README
+++ b/1107.2138/README
@@ -1,1 +1,2 @@
-This code does not work
+We can make this build ... but there are hundreds of x-refs that are hand coded instead of refs,
+and that's just hopeless for now.
