--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -1421,10 +1421,8 @@ in a form presented in section \ref{fin10}, appears as the most natural and cons
 Lessons for future work are drawn in section \ref{fin12}, and some open problems are suggested in section \ref{fin13}.
     
 %    \hspace{5mm}
-    
-\vspace{3mm} 
 
-The reader interested only in the results may skip the technical sections \ref{fin4} to \ref{fin8}, and focus upon the first pages of section 9, which can be regarded 
+The reader interested only in the results may skip the technical sections \ref{fin4} to \ref{fin8}, and focus upon the first pages of section \ref{fin9}, which can be regarded 
 as a self-contained reading guide for them, and upon section \ref{fin11}. The conceptual outcomes are gathered in sections \ref{fin10} and \ref{fin12}.
      
  }%EndZeText
