--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-12-21 07:41:18 -0500 
+%% Created for Pete Su at 2020-01-20 14:03:00 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Allahverdyan:2011cx,
+	Archiveprefix = {arXiv},
+	Author = {Allahverdyan, Armen E. and Balian, Roger and Nieuwenhuizen, Theo M.},
+	Date-Added = {2020-01-20 14:02:40 -0500},
+	Date-Modified = {2020-01-20 14:02:40 -0500},
+	Doi = {10.1016/j.physrep.2012.11.001},
+	Eprint = {1107.2138},
+	Journal = {Phys. Rept.},
+	Pages = {1-166},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = ARXIV:1107.2138;%%},
+	Title = {{Understanding quantum measurement from the solution of dynamical models}},
+	Volume = {525},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.physrep.2012.11.001}}
 
 @article{Schreiber2014arXiv,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
